# Eyes_Rehabilitation_Device

./: .gitignore  .mxproject  Eyes_Rehabilitation_Device.ioc  README.md  hustthesis.cls  latexmkrc  main.tex
App/: train_modes.c  train_modes.h
Core/Inc/: main.h  stm32h7xx_it.h  usart.h
Core/Src/: dma.c  gpio.c  main.c  stm32h7xx_it.c  tim.c  usart.c
Device/BMI088/: BMI088Middleware.c  BMI088driver.c
Device/BMI088/inc/: BMI088Middleware.h  BMI088driver.h  BMI088reg.h
Device/Buzzer/: buzzer.c  buzzer.h
Device/HeadTracker/: head_tracker.c  head_tracker.h
Device/Key/: key.c  key.h
Device/LED/: led.c  led.h
Device/Laser/: laser.c  laser.h
Device/SBUS/: sbus.c  sbus.h
Device/Servo/: servo.c  servo.h
Device/Voice/: voice.c  voice.h
Device/WS2812/: ws2812.c  ws2812.h
Drivers/STM32H7xx_HAL_Driver/Inc/: stm32h7xx_hal_def.h
MDK-ARM/: .clangd  CtrBoard-H7_IMU.cbuild-idx.yml  CtrBoard-H7_IMU.cproject.yml  CtrBoard-H7_IMU.csolution.yml  CtrBoard-H7_IMU.uvguix.albert  CtrBoard-H7_IMU.uvoptx  CtrBoard-H7_IMU.uvprojx  Eyes_Rehabilitation_Device.cbuild-idx.yml  Eyes_Rehabilitation_Device.cbuild-pack.yml  Eyes_Rehabilitation_Device.cproject.yml  Eyes_Rehabilitation_Device.csolution.yml  Eyes_Rehabilitation_Device.uvguix.albert  Eyes_Rehabilitation_Device.uvoptx  Eyes_Rehabilitation_Device.uvprojx  Eyes_Rehabilitation_Device_Eyes_Rehabilitation_Device.sct  startup_stm32h723xx.lst  vcpkg-configuration.json
MDK-ARM/CtrBoard-H7_IMU/: CtrBoard-H7_IMU.axf  CtrBoard-H7_IMU.build_log.htm  CtrBoard-H7_IMU.hex  CtrBoard-H7_IMU.htm  CtrBoard-H7_IMU.lnp  CtrBoard-H7_IMU.map  CtrBoard-H7_IMU_CtrBoard-H7_IMU.dep  bmi088driver.d  bmi088middleware.d  dma.d  gpio.d  main.d  spi.d  stm32h7xx_hal.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_msp.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_spi.d  stm32h7xx_hal_spi_ex.d  stm32h7xx_hal_tim.d  stm32h7xx_hal_tim_ex.d  stm32h7xx_it.d  system_stm32h7xx.d
MDK-ARM/Eyes_Rehabilitation_Device/: Eyes_Rehabilitation_Device.axf  Eyes_Rehabilitation_Device.build_log.htm  Eyes_Rehabilitation_Device.hex  Eyes_Rehabilitation_Device.htm  Eyes_Rehabilitation_Device.lnp  Eyes_Rehabilitation_Device.map  Eyes_Rehabilitation_Device_Eyes_Rehabilitation_Device.dep  bmi088driver.d  bmi088middleware.d  buzzer.d  dma.d  gpio.d  head_tracker.d  key.d  laser.d  led.d  main.d  servo.d  spi.d  startup_stm32h723xx.d  stm32h7xx_hal.d  stm32h7xx_hal_cortex.d  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_exti.d  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.d  stm32h7xx_hal_hsem.d  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_msp.d  stm32h7xx_hal_pwr.d  stm32h7xx_hal_pwr_ex.d  stm32h7xx_hal_rcc.d  stm32h7xx_hal_rcc_ex.d  stm32h7xx_hal_spi.d  stm32h7xx_hal_spi_ex.d  stm32h7xx_hal_tim.d  (+9 more)
MDK-ARM/RTE/_CtrBoard-H7_IMU/: RTE_Components.h
MDK-ARM/RTE/_CtrBoard_H7_IMU/: RTE_Components.h
MDK-ARM/RTE/_Eyes_Rehabilitation_Device/: RTE_Components.h
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
MDK-ARM/tmp/1/: .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
MDK-ARM/tmp/CtrBoard-H7_IMU+CtrBoard_H7_IMU/: CMakeLists.txt  groups.cmake  toolchain.cmake
MDK-ARM/tmp/Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device/: CMakeLists.txt  components.cmake
MDK-ARM/tmp/Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device/src/Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device-stamp/: Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device-configure-.cmake  Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device-database-.cmake
MDK-ARM/tmp/Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device/tmp/: Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device-cfgcmd.txt  Eyes_Rehabilitation_Device+Eyes_Rehabilitation_Device-mkdirs.cmake
bib/: ref.bib
chapters/: 00_abstract.tex  00_cover.tex  00_declaration.tex  01_intro.tex  02_system.tex  03_hardware.tex  04_software.tex  05_testing.tex  06_conclusion.tex  99_ack.tex  appendix.tex
(+6 files in other folders)
